Bug 272208 - konqueror khtml isnt able anymore to zoom in http://kde-look.org
Summary: konqueror khtml isnt able anymore to zoom in http://kde-look.org
Status: RESOLVED FIXED
Alias: None
Product: konqueror
Classification: Applications
Component: khtml (other bugs)
Version First Reported In: 0.0.1
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Konqueror Bugs
URL:
Keywords:
: 273990 (view as bug list)
Depends on:
Blocks:
 
Reported: 2011-05-02 06:36 UTC by
Modified: 2011-05-24 00:11 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description 2011-05-02 06:36:31 UTC
Version:           0.0.1 (using Devel) 
OS:                Linux

Entering in http://kde-look.org using konquror khtml, entering in for example wallpapers area and selecting some wallpaper, when clicking in the zoom link, nothing happens, i need to go to webkit view ot be able to click the zoom link to view a bigger wallpaper

Reproducible: Always




OS: Linux (x86_64) release 2.6.36.2-desktop-2mnb
Compiler: gcc
Comment 1 Maksim Orlovich 2011-05-02 15:11:52 UTC
Same cause as bug 269175. I really should stop forgetting to commit fixes...
Comment 2 Maksim Orlovich 2011-05-17 14:35:42 UTC
Git commit 6f6a4933975e85ebbee2c3354096c1c3a4889a3f by Maks Orlovich.
Committed on 17/05/2011 at 14:34.
Pushed by orlovich into branch 'KDE/4.6'.

Fix cloning of checkboxes.

... And with it element-cloning method in jQuery 1.5, which was
making us hit IE-specific path due to the bug. Showed up in particular
on Doodle wizard, and kde-look thumbs.

CCBUG:269175
BUG:272208

M  +3    -0    khtml/html/html_formimpl.cpp     

http://commits.kde.org/kdelibs/6f6a4933975e85ebbee2c3354096c1c3a4889a3f
Comment 3 Maksim Orlovich 2011-05-17 14:46:33 UTC
Git commit d22393aecc062ef4ab8bc9692911a4ec828f7007 by Maks Orlovich.
Committed on 02/04/2011 at 17:16.
Pushed by orlovich into branch 'master'.

Fix cloning of checkboxes.

... And with it element-cloning method in jQuery 1.5, which was
making us hit IE-specific path due to the bug. Showed up in particular
on Doodle wizard, and kde-look thumbs.

CCBUG:269175
BUG:272208

M  +3    -0    khtml/html/html_formimpl.cpp     

http://commits.kde.org/kdelibs/d22393aecc062ef4ab8bc9692911a4ec828f7007
Comment 4 Andrea Iacovitti 2011-05-23 23:34:15 UTC
*** Bug 273990 has been marked as a duplicate of this bug. ***
Comment 5 2011-05-24 00:11:03 UTC
Now when clicking to zoom the image, in fact zooms it, but now the image close button appears under some publicity image and isnt possible to close the zoom frame.

This only happens with khtml view.
When using the webkit view, the publicity image stays under the zoom frame.