Fix cloning of checkboxes.

... And with it element-cloning method in jQuery 1.5, which was
making us hit IE-specific path due to the bug. Showed up in particular
on Doodle wizard, and kde-look thumbs.

CCBUG:269175
BUG:272208