khtml/html/html_formimpl.cpp
@@ -1544,6 +1544,9 @@ void HTMLInputElementImpl::copyNonAttributeProperties(const ElementImpl* source)
 
     m_value = e->m_value;
     m_checked = e->m_checked;
+    m_defaultChecked = e->m_checked;
+    m_useDefaultChecked = e->m_defaultChecked;
+    m_indeterminate = e->m_indeterminate;
     // ### copy more?
 
     HTMLGenericFormElementImpl::copyNonAttributeProperties(source);
